# devpod

./: .devpodignore  .env  .gitignore  .gitmodules  .golangci.yaml  CODE_OF_CONDUCT.md  COMMUNITY.MD  COMMUNITY.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  community.yaml  dev_devpod.sh  foo.db  go.mod  go.sum  go_BACKUP_13714.sum  main.go  netlify.toml  provider.yaml  test.json
.devcontainer/: Dockerfile  devcontainer.json  init.sh  post_create.sh
.github/: licenses.tmpl
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-devcontainer-image.yaml  e2e-tests.yaml  e2e-win-fill-tests.yaml  e2e-win-full-tests.yaml  flatpak.yaml  go-licenses-check.yaml  go-licenses.yaml  golangci-lint.yaml  publish_desktop.yaml  release.yaml  sign_desktop.yaml  stale.yaml  ui-ci.yaml  unit-tests.yaml
android/: .gitignore  gradle.properties  settings.gradle
android/app/: build.gradle
cmd/: build.go  delete.go  destroy.go  export.go  import.go  list.go  logs.go  logs_daemon.go  ping.go  pprof.go  prebuild.go  profile.go  root.go  ssh.go  ssh_tailscale.go  status.go  stop.go  troubleshoot.go  up.go  upgrade.go  version.go
cmd/agent/: agent.go  cleanup.go  container-tunnel.go  container_tunnel.go  daemon.go  delete.go  docker_credentials.go  git_credentials.go  git_ssh_signature.go  git_ssh_signature_helper.go  openvscode.go  setup_container.go  setup_loft_platform_access.go  ssh-server.go  start.go  status.go  stop.go  up.go  update_config.go  vscode.go  watch.go
cmd/completion/: suggestions.go
cmd/context/: context.go  create.go  delete.go  list.go  options.go  set_options.go  use.go
cmd/engine/: delete.go  engine.go  list.go  login.go
cmd/flags/: flags.go
cmd/helper/: check_provider_update.go  docker_credentials.go  fleet_helper.go  get_image.go  get_pro_name.go  get_provider_name.go  get_workspace_config.go  get_workspace_name.go  get_workspace_uid.go  helper.go  request.go  sh.go  ssh-server.go  ssh_client.go  ssh_git_clone.go  ssh_server.go
cmd/ide/: ide.go  list.go  options.go  set_options.go  use.go
cmd/machine/: create.go  delete.go  inspect.go  list.go  machine.go  ssh.go  start.go  status.go  stop.go
cmd/pro/: check_health.go  check_update.go  create_workspace.go  daemon.go  daemon_start.go  daemon_status.go  delete.go  import_workspace.go  list.go  list_clusters.go  list_projects.go  list_templates.go  list_workspaces.go  login.go  pro.go  rebuild.go  self.go  sleep.go  start.go  update_provider.go  update_workspace.go  version.go  wakeup.go  watch_workspaces.go
cmd/provider/: add.go  delete.go  exec.go  import_workspace.go  init.go  list-default-providers.go  list.go  options.go  provider.go  set_options.go  update.go  use.go
cmd/server/: list.go  server.go  ssh.go  start.go  status.go  stop.go
cmd/tailscale/: tailscale.go  tailscaled.go
cmd/ts/: metrics.go  netcheck.go  ping.go  status.go  tailscale.go  util.go
cmd/use/: use.go
cmd/utils/: completion.go
desktop/: .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  README.md  eslint.config.js  index.html  latest.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
desktop/flatpak/: DevPod.metainfo.xml  sh.loft.devpod.tmpl
desktop/src/: App.tsx  DataTable.tsx  DevpodContext.tsx  ProRoot.tsx  ThemeProvider.tsx  constants.ts  helpers.ts  main.tsx  queryKeys.ts  routes.tsx  runner.ts  types.ts  useAppReady.ts  useAppReady.tsx  useChangelogModal.tsx  useCommunityContributions.ts  useIDEs.ts  useWelcomeModal.tsx  vite-env.d.ts
desktop/src-tauri/: .gitignore  Cargo.toml  Info.plist  devpod.icns  entitlements.plist  org.loft.devpod.yaml  sign.bat  tauri-dev-linux.conf.json  tauri-dev.conf.json  tauri-flatpak.conf.json  tauri-linux.conf.json  tauri.conf.json
desktop/src-tauri/capabilities/: migrated.json  updater.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: action_logs.rs  commands.rs  community_contributions.rs  custom_protocol.rs  daemon.rs  file_exists.rs  fix_env.rs  get_env.rs  install_cli.rs  log_message.rs  logging.rs  main.rs  new_workspace_id.rs  providers.rs  resource_watcher.rs  server.rs  settings.rs  system_tray.rs  ui_messages.rs  ui_ready.rs  updates.rs  util.rs  window.rs  workspaces.rs
desktop/src-tauri/src/commands/: config.rs  constants.rs  delete_pro_instance.rs  delete_provider.rs  list_pro_instances.rs  list_providers.rs  list_workspaces.rs  start_daemon.rs  use_provider.rs
desktop/src-tauri/src/daemon/: client.rs
desktop/src-tauri/tests/: test_fix_env.rs
desktop/update-window/: index.html
docs/: README.md  docusaurus.config.js  package.json  sidebars.js
docs/internal/: networking.md
docs/pages/: how-it-works-k8s.mdx  how-it-works.mdx  telemetry.mdx  what-is-devpod.mdx
docs/public/: _redirects
docs/uml/: c4_build.puml  c4_build_k8s.puml  c4_component.puml  c4_component_machine.puml  c4_component_workspace.puml  c4_k8s.puml  c4_machines.puml  c4_workspaces.puml  k8s_build.puml  up_sequence.puml
e2e/: README.md  e2e_suite_test.go
e2e/framework/: agent_server.go  command.go  exec.go  framework.go  helper.go  server_utils.go  types.go  util.go
examples/build-multi-stage/: .devcontainer.json  Dockerfile  README.md
examples/compose/: .devcontainer.json  Dockerfile  README.md  devcontainer.Dockerfile  devcontainer.Dockerfile2  docker-compose.devcontainer.yml  known_hosts  onCreateCommand.sh
examples/feature/: .devcontainer.json
examples/local-k8s-provider/: provider.yaml
hack/: build-desktop-cli.bat  build-desktop-cli.sh  build-e2e-race.sh  build-e2e.sh  build-grpc.sh  dev_devpod.sh  dev_devpod_pro.sh  gen-desktop.sh  rebuild.sh  unit-tests.sh
hack/pro/: main.go  (+1 more)
loadtest/: 2024-11-07-11:07:25.out  README.md  deleteWorkspaces.sh  emulateTraffic.sh  emulateTraffic_k8s.sh  generateLoad.sh  generateLoad_k8s.sh  init_monitor.sh  monitor.sh  run.sh  run_k8s.sh  startWorkspaces.sh
providers/: providers.go
scripts/: install_devcontainer.sh  install_devpod.sh.tpl  install_docker.sh  scripts.go  wrapper.go  wrapper.sh
(+1124 files in other folders)
