[package]
name = "devpod-desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["loft.sh"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
# Tauri
tauri = { version = "1.2.4", features = [ "updater",
        "clipboard-write-text",
        "dialog-open",
        "fs-all",
        "macos-private-api",
        "os-all",
        "path-all",
        "process-command-api",
        "process-exit",
        "shell-all",
        "system-tray",
        "window-set-focus",
        "window-start-dragging",
        "icon-ico",
] }
tauri-plugin-deep-link = { version = "0.1.0" }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
# Logging
log = { version = "0.4" }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
# Datetime
chrono = { version = "0.4.23", features = ["serde"] }

tokio = { version = "1.26.0", features = ["time", "parking_lot", "sync"] }
thiserror = "1.0.38"
regex = "1.7.1"
lazy_static = "1.4.0"
url = "2.3.1"
anyhow = "1.0.70"
serde_qs = "0.12.0"
dirs = "5.0.1"
serde_yaml = "0.9.21"
reqwest = "0.11.18"
dispatch = "0.2.0"
strip-ansi-escapes = "0.1.1"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.50.0"
windows = { version = "0.48", features = [
        "Win32_Foundation",
        "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "macos")'.dependencies]
window-vibrancy = "0.3.2"
cocoa = "0.24"
objc = "0.2"


[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
